Another attempt to fix slider

--- a/index.html
+++ b/index.html
@@ -336,42 +336,62 @@
 				    <div class="slider__wrapper">
 						<div class="slider__item">
 							<div class="card">
-							<img class="card-img-top" src="img/face1.jpg">
-							<div class="card-body bg-grey-light text-center">
-								<h5 class="card-title">Светлана<br>Иванова</h5>
-								<p class="card-text text-grey">Россия</p>
+								<img class="card-img-top" src="img/face1.jpg">
+								<div class="card-body bg-grey-light text-center">
+									<h5 class="card-title">Светлана<br>Иванова</h5>
+									<p class="card-text text-grey">Россия</p>
+								</div>
 							</div>
-						</div>
 						</div>
 
 						<div class="slider__item">
 							<div class="card">
-							<img class="card-img-top" src="img/face2.jpg">
-							<div class="card-body bg-grey-light text-center">
-								<h5 class="card-title">Иван<br>Иванов</h5>
-								<p class="card-text text-grey">Россия</p>
+								<img class="card-img-top" src="img/face2.jpg">
+								<div class="card-body bg-grey-light text-center">
+									<h5 class="card-title">Иван<br>Иванов</h5>
+									<p class="card-text text-grey">Россия</p>
+								</div>
 							</div>
-						</div>
 						</div>
 
 						<div class="slider__item">
 							<div class="card">
-							<img class="card-img-top" src="img/face2.jpg">
-							<div class="card-body bg-grey-light text-center">
-								<h5 class="card-title">Иван<br>Иванов</h5>
-								<p class="card-text text-grey">Россия</p>
+								<img class="card-img-top" src="img/face2.jpg">
+								<div class="card-body bg-grey-light text-center">
+									<h5 class="card-title">Иван<br>Иванов</h5>
+									<p class="card-text text-grey">Россия</p>
+								</div>
 							</div>
-						</div>
 						</div>
 
 						<div class="slider__item">
 							<div class="card">
-							<img class="card-img-top" src="img/face1.jpg">
-							<div class="card-body bg-grey-light text-center">
-								<h5 class="card-title">Светлана<br>Иванова</h5>
-								<p class="card-text text-grey">Россия</p>
+								<img class="card-img-top" src="img/face1.jpg">
+								<div class="card-body bg-grey-light text-center">
+									<h5 class="card-title">Светлана<br>Иванова</h5>
+									<p class="card-text text-grey">Россия</p>
+								</div>
 							</div>
 						</div>
+
+						<div class="slider__item">
+							<div class="card">
+								<img class="card-img-top" src="img/face1.jpg">
+								<div class="card-body bg-grey-light text-center">
+									<h5 class="card-title">Светлана<br>Иванова</h5>
+									<p class="card-text text-grey">Россия</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="slider__item">
+							<div class="card">
+								<img class="card-img-top" src="img/face1.jpg">
+								<div class="card-body bg-grey-light text-center">
+									<h5 class="card-title">Светлана<br>Иванова</h5>
+									<p class="card-text text-grey">Россия</p>
+								</div>
+							</div>
 						</div>
 
 				    </div>
