--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 					<div class="text-body pd-t-1 pd-b-3 text-white">16-18 октября 2019, Республика Татарстан, г. Альметьевск</div>
 					<div class="">
 						<div class="text-mini">До конца регистрации осталось:</div>
-						<ul class="fl-group fl-wrap content-center items-center">
+						<ul class="fl-group fl-wrap content-center items-center pl-0">
 							<li><span id="days" class="text-bold"></span><div class="text-micro">дней</div></li>
 						    <li><span id="hours" class="text-bold"></span><div class="text-micro">часов</div></li>
 						    <li><span id="minutes" class="text-bold"></span><div class="text-micro">минут</div></li>
