--- a/index.html
+++ b/index.html
@@ -124,7 +124,6 @@
 		<!-- block-start end -->
 
 		<!-- block-info start -->
-		<div id="about" class="anchor"></div>
 		<div class="block-info">
 			<div class="container pd-tb-15">
 				<div class="fl-group fl-wrap content-around items-center">
@@ -137,11 +136,12 @@
 		<!-- block-info end -->
 
 		<!-- block-hello start -->
+		<div class="anchor" id="b1"></div>
 		<div class="block-section bg-light">
 			<div class="container pd-tb-2">
 				<div class="row">
 					<div class="col-12 col-sm-12 col-md-8 col-lg-8 col-xl-8 pt-0">
-						<p id="b1" class="text-hello text-grey text-italic">Организация Международного форума «Наука и Инновации» для компании «Татнефть»
+						<p class="text-hello text-grey text-italic">Организация Международного форума «Наука и Инновации» для компании «Татнефть»
 						и Альметьевского государственного нефтяного института становится доброй традицией.  <br><br>
 						Инновационные технологии активно внедряются во все сферы нашей жизни. Использование достижений науки и технического прогресса
 						в производстве является гарантом развития и обеспечения конкурентоспособности как экономики в целом, 
@@ -164,8 +164,9 @@
 			</div>
 		</div>
 		<!-- block-hello end -->
-		
+		<div class="anchor" id="b2"></div>
 		<div>
+
 			<h1 class="my-5 text-center">
 				Новости
 			</h1>
@@ -230,52 +231,10 @@
 		</div>
 
 		<!-- block-gallery start -->
-		<div id="photo" class="anchor"></div>
+		<div id="b3" class="anchor"></div>
 		<section class="gallery-block grid-gallery">
             <div class="container">
                 <div class="text-title text-center">Фотогалерея</div>
-                <!-- <div class="row">
-                    <div class="col-md-6 col-lg-4 item">
-                        <a class="lightbox" href="img/1.jpg">
-                            <img class="img-fluid image scale-on-hover" src="img/1.jpg">
-                        </a>
-                    </div>
-                    <div class="col-md-6 col-lg-4 item">
-                        <a class="lightbox" href="img/2.jpg">
-                            <img class="img-fluid image scale-on-hover" src="img/2.jpg">
-                        </a>
-                    </div>
-                    <div class="col-md-6 col-lg-4 item">
-                        <a class="lightbox" href="img/3.jpg">
-                            <img class="img-fluid image scale-on-hover" src="img/3.jpg">
-                        </a>
-                    </div>
-                    <div class="col-md-6 col-lg-4 item">
-                        <a class="lightbox" href="img/4.jpg">
-                            <img class="img-fluid image scale-on-hover" src="img/4.jpg">
-                        </a>
-                    </div>
-                    <div class="col-md-6 col-lg-4 item">
-                        <a class="lightbox" href="img/5.jpg">
-                            <img class="img-fluid image scale-on-hover" src="img/5.jpg">
-                        </a>
-                    </div>
-                    <div class="col-md-6 col-lg-4 item">
-                        <a class="lightbox" href="img/6.jpg">
-                            <img class="img-fluid image scale-on-hover" src="img/6.jpg">
-                        </a>
-                    </div>
-                    <div class="col-md-6 col-lg-4 item">
-                        <a class="lightbox" href="img/7.jpg">
-                            <img class="img-fluid image scale-on-hover" src="img/7.jpg">
-                        </a>
-                    </div>
-                    <div class="col-md-6 col-lg-4 item">
-                        <a class="lightbox" href="img/8.jpg">
-                            <img class="img-fluid image scale-on-hover" src="img/8.jpg">
-                        </a>
-                    </div>
-                </div> -->
             </div>
         </section>
         
@@ -334,6 +293,7 @@
 		<!-- block-gallery end -->
 
 		<!-- block-speakers start -->
+		<div class="anchor" id="b4"></div>
 		<div class="block-section bg-light">
 			<div id="2" class="anchor"></div>
 			<div class="container">
@@ -409,8 +369,8 @@
 		<!-- block-speakers end -->
 
 		<!-- block-schedule start -->
+		<div id="b5" class="anchor"></div>
 		<div class="block-section">
-			<div id="3" class="anchor"></div>
 			<div class="container">
 				<div class="text-title text-center">Расписание</div>
 				<div class="text-bold text-white text-center">
@@ -431,6 +391,7 @@
 		<!-- block-register end -->
 
 		<!-- block-cost start -->
+		<div id="b6" class="anchor"></div>
 		<div class="block-section">
 			<div id="5" class="anchor"></div>
 			<div class="container">
@@ -531,7 +492,7 @@
 		</div>
 
 		<!-- block-sponsors start -->
-		<div id="sponsors" class="anchor"></div>
+		<div id="b7" class="anchor"></div>
 		<div class="block-section bg-light">
 			<div class="text-title text-center">Спонсоры</div>
 			<div class="container pd-tb-15">
@@ -586,6 +547,7 @@
 						</a>		
 					</div>	
 				</div> -->
+			<div id="b8" class="anchor"></div>
 			<h1 class='my-5 text-center'>Контакты</h1>
 			<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A69b23ff36bf4ae84d2b5650578666ee0399b7c222af409315c097240de2ca9d8&amp;width=100%25&amp;height=460&amp;lang=ru_RU&amp;scroll=false"></script>
 		</div>
@@ -595,6 +557,7 @@
 	<!-- wrapper end -->
 	
 	<!-- footer -->
+
 	<div class='bg-black text-center py-5'>
 		<a class='mx-3 text-white' href="https://www.tatneft.ru">
 			<i class="fa fa-globe fa-2x"></i>
