news block structure fixes

--- a/index.html
+++ b/index.html
@@ -166,19 +166,34 @@
 		<!-- block-hello end -->
 		<div class="anchor" id="b2"></div>
 		<div>
-
+			<div id="FullNewsSlider">
+				<div class="shadow"></div>
+				<div class="full-slides">
+					<div class="slide card card-body">
+						<h2>Lorem ipsum dolor.</h2>
+						<img src="img/news.jpg" alt="" class="w-100">
+						<p class="text-micro text-secondary my-3">21 сентября 2019 г.</p>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam illum recusandae quaerat, repellendus neque aliquam molestiae corporis voluptatum consectetur dicta.
+						</p>
+					</div>
+				</div>
+				<div class="arrow left"></div>
+				<div class="arrow right"></div>
+			</div>
 			<h1 class="my-5 text-center">
 				Новости
 			</h1>
 			<div class="container">
 				<div id='news' class="slider">
 				    <div class="slider__wrapper">
+					
 						<div class="slider__item">
-							<div style="">
+							<div data-toggle="modal" data-target="#fullnewsModal">
 								<img class='news-img' src="img/news.jpg" alt="news">
-								<h5 class="card-title">Title of news</h5>
-								<p class="card-text">
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, iure! Illo hic est tempore similique, temporibus quibusdam repellendus dolore eos cumque voluptate saepe quo, neque perferendis nihil odit porro libero.
+								<h5 class="card-title">Lorem ipsum dolor.</h5>
+								<p class="card-text text-micro text-secondary">
+									21 сентября 2019 г.
 								</p>
 							</div>
 						</div>
@@ -186,9 +201,9 @@
 						<div class="slider__item">
 							<div style="">
 								<img class='news-img' src="img/news2.jpg" alt="news">
-								<h5 class="card-title">Title of news</h5>
-								<p class="card-text">
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, iure! Illo hic est tempore similique, temporibus quibusdam repellendus dolore eos cumque voluptate saepe quo, neque perferendis nihil odit porro libero.
+								<h5 class="card-title">Lorem ipsum dolor sit.</h5>
+								<p class="card-text text-micro text-secondary">
+									21 сентября 2019 г.
 								</p>
 							</div>
 						</div>
@@ -196,9 +211,9 @@
 						<div class="slider__item">
 							<div style="">
 								<img class='news-img' src="img/news3.jpg" alt="news">
-								<h5 class="card-title">Title of news</h5>
-								<p class="card-text">
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, iure! Illo hic est tempore similique, temporibus quibusdam repellendus dolore eos cumque voluptate saepe quo, neque perferendis nihil odit porro libero.
+								<h5 class="card-title">Lorem ipsum dolor sit amet, consectetur.</h5>
+								<p class="card-text text-micro text-secondary">
+									21 сентября 2019 г.
 								</p>
 							</div>
 						</div>
@@ -206,9 +221,9 @@
 						<div class="slider__item">
 							<div style="">
 								<img class='news-img' src="img/news4.jpg" alt="news">
-								<h5 class="card-title">Title of news</h5>
-								<p class="card-text">
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, iure! Illo hic est tempore similique, temporibus quibusdam repellendus dolore eos cumque voluptate saepe quo, neque perferendis nihil odit porro libero.
+								<h5 class="card-title">Lorem ipsum dolor sit amet.</h5>
+								<p class="card-text text-micro text-secondary">
+									21 сентября 2019 г.
 								</p>
 							</div>
 						</div>
@@ -216,12 +231,14 @@
 						<div class="slider__item">
 							<div style="">
 								<img class='news-img' src="img/news5.jpg" alt="news">
-								<h5 class="card-title">Title of news</h5>
-								<p class="card-text">
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, iure! Illo hic est tempore similique, temporibus quibusdam repellendus dolore eos cumque voluptate saepe quo, neque perferendis nihil odit porro libero.
+								<h5 class="card-title">Lorem ipsum.</h5>
+								<p class="card-text text-micro text-secondary">
+									21 сентября 2019 г.
 								</p>
 							</div>
 						</div>
+
+						
 
 				    </div>
 				    <a class="slider__control slider__control_left" href="#" role="button"></a>
@@ -248,7 +265,7 @@
 					</div>
 					<div class="col-12 col-sm-12 col-md-4 col-lg-3 col-xl-3" style="padding: 0;">
 						<div class="card">
-							<img class="card-img-top" src="img/2.jpg">
+							<a href="img/1.jpg"><img class="card-img-top" src="img/2.jpg"></a>
 						</div>
 					</div>
 					<div class="col-12 col-sm-12 col-md-4 col-lg-3 col-xl-3" style="padding: 0;">
