--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
 
 <body>
 	
-	<nav class="w-100 position-fixed navbar navbar-expand-lg bg-black text-white">
-		<a class="navbar-brand d-block d-lg-none" href="#"><img src="img/tn_logo2.png"></a>
+	<nav class="w-100 position-fixed navbar navbar-expand-xl bg-black text-white">
+		<a class="navbar-brand d-block d-xl-none" href="#"><img src="img/tn_logo2.png"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		    <i class='fa fa-navicon text-white'></i>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 		    <ul class="navbar-nav mx-auto">
-		    	<li class="nav-item d-none d-lg-block">
+		    	<li class="nav-item d-none d-xl-block">
 		        	<a class="nav-link mt-0" href="/"><img src="img/tn_logo2.png"></a>
 		    	</li>
 		    	<li class="nav-item">
