Hiding menu after clicking on mobile

--- a/index.html
+++ b/index.html
@@ -45,31 +45,31 @@
 		    	<li class="nav-item d-none d-xl-block">
 		        	<a class="nav-link mt-0" href="/"><img src="img/tn_logo2.png"></a>
 		    	</li>
-		    	<li class="nav-item">
+		    	<li  class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
 		        	<a class="nav-link" href="#b1">О форуме</a>
 		    	</li>
-		    	<li class="nav-item">
+		    	<li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
 		        	<a class="nav-link" href="#b2">Новости</a>
 		    	</li>
-		    	<li class="nav-item">
+		    	<li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
 		        	<a class="nav-link" href="#b3">Фотогалерея</a>
 		    	</li>
-		    	<li class="nav-item">
+		    	<li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
 		        	<a class="nav-link" href="#b4">Спикеры</a>
 		    	</li>
-		    	<li class="nav-item">
+		    	<li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
 		        	<a class="nav-link" href="#b5">Расписание</a>
 		    	</li>
-		    	<li class="nav-item">
+		    	<li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
 		        	<a class="nav-link" href="#b6">Стоимость</a>
 		    	</li>
-		    	<li class="nav-item">
+		    	<li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
 		        	<a class="nav-link" href="#b7">Спонсоры</a>
 		    	</li>
-		    	<li class="nav-item">
+		    	<li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
 		        	<a class="nav-link" href="#b8">Контакты</a>
 		    	</li>
-		    	<li class="nav-item">
+		    	<li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
 		        	<button class="btn mt-1 bg-green text-white text-uppercase reg-button" role='button'>Регистрация</button>
 		    	</li>
 		    </ul>
