Slider of full news

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     <link rel="stylesheet" href="baguetteBox.css">
 	<link rel="stylesheet" href="grid-gallery.css">
 	<link rel="stylesheet" href="slider.css">
+	
+	
+
 
 	<script src='https://www.google.com/recaptcha/api.js'></script>
 
@@ -174,7 +177,23 @@
 						<img src="img/news.jpg" alt="" class="w-100">
 						<p class="text-micro text-secondary my-3">21 сентября 2019 г.</p>
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam illum recusandae quaerat, repellendus neque aliquam molestiae corporis voluptatum consectetur dicta.
+							1)Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam illum recusandae quaerat, repellendus neque aliquam molestiae corporis voluptatum consectetur dicta.
+						</p>
+					</div>
+					<div class="slide card card-body">
+						<h2>Lorem ipsum dolor.</h2>
+						<img src="img/news2.jpg" alt="" class="w-100">
+						<p class="text-micro text-secondary my-3">21 сентября 2019 г.</p>
+						<p>
+							2)Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam illum recusandae quaerat, repellendus neque aliquam molestiae corporis voluptatum consectetur dicta.
+						</p>
+					</div>
+					<div class="slide card card-body">
+						<h2>Lorem ipsum dolor.</h2>
+						<img src="img/news3.jpg" alt="" class="w-100">
+						<p class="text-micro text-secondary my-3">21 сентября 2019 г.</p>
+						<p>
+							3)Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam illum recusandae quaerat, repellendus neque aliquam molestiae corporis voluptatum consectetur dicta.
 						</p>
 					</div>
 				</div>
@@ -757,6 +776,7 @@
     <script>
         baguetteBox.run('.grid-gallery', { animation: 'slideIn'});
     </script>
-	<script src='slider.js'></script>
+    <script src='slider.js'></script>
+	<script src='fullslider.js'></script>
 </body>
 </html>
