First news is clickable

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 				    <div class="slider__wrapper">
 					
 						<div class="slider__item">
-							<div data-toggle="modal" data-target="#fullnewsModal">
+							<div onclick='openSlider(0);'>
 								<img class='news-img' src="img/news.jpg" alt="news">
 								<h5 class="card-title">Lorem ipsum dolor.</h5>
 								<p class="card-text text-micro text-secondary">
